--- a/Shirley's Birthday Invitation.html
+++ b/Shirley's Birthday Invitation.html
@@ -1,5 +1,5 @@
 <h1>It's Shirley's Birthday!</h1>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" />
+<img src="C:\Users\simpl\Desktop\Web Development\Web Development Projects\Movie Ranking Picture rev.png/">
 <h2>We are missing you</h2>
 <h3>Please bring:</h3>
 <ul>
