--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>I am a Web Developer</h2>
     <hr />
     <h3><a href="./public/Movie Ranking File.html">My Favorite Movies</a>
-        <img src="./assets/images/Movie Ranking Picture rev.png" height="200" alt="movie making project preview">
+        <img src="assets/images/Movie Ranking Picture rev.png" height="200" alt="movie making project preview">
         <h3><a href="./Shirley's Birthday Invitation.html">Shirley's Birthday Invitation</a>
-            <img src="./assets/images/Shirley's BD Invite rev.png" height="200" alt="birthday Invitation preview">
+            <img src="assets/images/Shirley's BD Invite rev.png" height="200" alt="birthday Invitation preview">
             <hr />
             <a href="./public/about.html">About Me</a>
             <a href="./public/contact.html">Contact Me</a>
